force-app/main/default/objects/Community_Alert__e/Community_Alert__e.object-meta.xml
<CustomObject>
    <label>Community Alert</label>
    <pluralLabel>Community Alerts</pluralLabel>
</CustomObject>