force-app/main/default/objects/Community_Alert__e/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>Create, Update, Delete, or Toast Only</description>
    <label>Action</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>