force-app/main/default/objects/Community_Alert__e/fields/Related_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_ID__c</fullName>
    <description>The record ID of the record that this alert is related to. Used to update and delete existing alerts.</description>
    <inlineHelpText>The record ID of the record that this alert is related to. Used to update and delete existing alerts.</inlineHelpText>
    <label>Related Record ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>