force-app/main/default/objects/Community_Alert__e/fields/Show_Toast__c.field-meta.xml
<CustomField>
    <fullName>Show_Toast__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, a toast alert will be displayed to the user</description>
    <label>Show Toast</label>
    <type>Checkbox</type>
</CustomField>