force-app/main/default/objects/Community_Alert__e/fields/Toast_Message__c.field-meta.xml
<CustomField>
    <fullName>Toast_Message__c</fullName>
    <label>Toast Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>