force-app/main/default/objects/Community_Alert__e/fields/Toast_Mode__c.field-meta.xml
<CustomField>
    <fullName>Toast_Mode__c</fullName>
    <label>Toast Mode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>