force-app/main/default/objects/Community_Alert__e/fields/Toast_Variant__c.field-meta.xml
<CustomField>
    <fullName>Toast_Variant__c</fullName>
    <description>If showing a toast message, choose variant option of &apos;error&apos;, &apos;success&apos;, &apos;warning&apos;, or &apos;info&apos;</description>
    <inlineHelpText>If showing a toast message, choose variant option of &apos;error&apos;, &apos;success&apos;, &apos;warning&apos;, or &apos;info&apos;</inlineHelpText>
    <label>Toast Variant</label>
    <length>50</length>
    <type>Text</type>
</CustomField>