force-app/main/default/objects/Community_Alert__e/fields/User_ID__c.field-meta.xml
<CustomField>
    <fullName>User_ID__c</fullName>
    <description>The record ID for the user that the alert should be shown to</description>
    <inlineHelpText>The record ID for the user that the alert should be shown to</inlineHelpText>
    <label>User ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>